Lagt til fragments funksjonalitet i navigasjonsmenyen. Textview er kun placeholder, bytt ut med funksjonalitet.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:name=".Landing_Activity"
             android:label="@string/title_activity_landing_activity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".RegisterActivity" />
     </application>
 
 </manifest>
